--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,7 @@
-<h1>Student Form</h1>
+<h1>New Student</h1>
 <%= form_tag students_path do %>
   <label>First Name:</label><br>
   <%= text_field_tag :'student[first_name]' %>
+  <label>Last Name:</label>
+  <%= text_field_tag :'student[last_name]' %>
 <% end %>
